<resources>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Reject all</string>
    <string name="network_error">No network connection, please check your network settings</string>
    <string name="server_failed">Connection to server failed, please try again later</string>
    <string name="search_result_format">\"%s\"</string>
    <string name="artist_details_format">%1$s, %2$s</string>
    <string name="sleep_mode">Sleep timer</string>
    <string name="cancel_sleep_mode">Sleep timer stopped</string>
    <string name="select_quit_time">Set the timer for stopping the player (in mins)</string>
    <string name="quit_warining">Player will stop playing after %d minute(s)</string>
    <string name="refresh_media_db">Refesh</string>
    <string name="refresh_in_processing">Refreshing</string>
    <string name="refresh_finish">Refreshing completed</string>
    <string name="refresh_start">Refreshing started</string>
    <string name="quit_player">Exit</string>
    <string name="music_settings">Settings</string>
    <string name="mobile_connect_settings">Mobile network</string>
    <string name="download_album_settings">Auto download album art</string>
    <string name="download_album_summary">May cost more flow expense on mobile network, please consider using WLAN</string>
    <string name="download_lyric_settings">Auto download lyrics</string>
    <string name="download_lyric_summary">"Downloading lyrics won't cost too much flow, you may also close this setting to save flow."</string>
    <string name="listen_to_music_online_settings">Listen to online music</string>
    <string name="listen_to_online_summary">Listen to music via mobile network or WLAN</string>
    <string name="flow_save_hint">Enable pop-ups</string>
    <string name="flow_save_hint_summary">Enable pop-ups to confirm downloading a song</string>
    <string name="other_settings">Others</string>
    <string name="music_filter">Filter files</string>
    <string name="min_track_size">Minimum size for music files</string>
    <string name="filter_by_folder">Filter by folder</string>
    <string name="select_folder">Select folder</string>
    <string name="android_album_settings">Use embedded album art</string>
    <string name="android_album_summary">Automatically using the album art from songs may cause errors.</string>
    <string name="play_and_download">Listen and download</string>
    <string name="play_and_download_summary">Listen to online songs and download them</string>
    <string name="screen_bright_wake">Screen stays awake</string>
    <string name="screen_bright_wake_summary">Backlight remains active when this setting is enabled</string>
    <string name="keep_quit_position_settings">Store last position</string>
    <string name="keep_quit_position_summary">Stores track of last position upon re-launch of the application</string>
    <string name="shake_settings">Shake to skip</string>
    <string name="shake_summary">Shake the device to skip to the next track</string>
    <string name="shake_sensitivity_settings">Shake sensitivity</string>
    <string name="shake_sensitivity_summary">Adjust the shake sensitivity to skip songs</string>
    <string name="shake_sensitivity_helper">Move left for higher sensitivity, right for lower</string>
    <string name="album_display_settings">Display album art</string>
    <string name="lyric_display_settings">Display lyrics</string>
    <string name="spectrogram_display_settings">Display spectrogram</string>
    <string name="spectrogram_display_summary">Displays visual spectrogram on home screen widget and music player</string>
    <string name="fade_effect_settings">Fade settings</string>
    <string name="fade_effect_summary">Enables fading between each played song</string>
    <string name="filter_notification">Filter has been filtered, you can change these settings in the filter settings.</string>
    <string name="delete_item">Delete</string>
    <string name="remove_item">Remove</string>
    <string name="delete_song_desc">\"%s\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc_nosdcard">\"%s\" will be permanently deleted from USB storage.</string>
    <string name="scanning">Scanning SD card…</string>
    <string name="scanning_nosdcard">Scanning USB storage…</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="online_indicator">-online</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="rename_album_menu">Rename album</string>
    <string name="rename_artist_menu">Rename artist</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard">Your phone does not have USB storage.</string>
    <string name="sdcard_busy_message">"Sorry, your SD card is busy.
 Please check SD card state."</string>
    <string name="sdcard_busy_message_nosdcard">Sorry, your USB storage is busy.</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_error_message_nosdcard">An error was encountered on your USB storage.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"%s\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorite">Add to Favorites</string>
    <string name="remove_from_favorite">Remove from Favorites</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist %d</string>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="loading">Loading</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search Music</string>
    <string name="all_tracks">All Songs</string>
    <string name="menu_batch_selection">Edit Mode</string>
    <string name="send_to">Send to</string>
    <string name="edit_id3">Edit ID3</string>
    <string name="download">Download</string>
    <string name="download_finished">Downloaded</string>
    <string name="download_processing">Downloading</string>
    <string name="download_batch_start">Start downloading all</string>
    <string name="delete_file_from_sdcard">Also delete file from SD card</string>
    <string name="online_search_hint">Search for online music</string>
    <string name="load_category_failed">Failed to load category list, please try again</string>
    <string name="load_category_in_process">Load list(s)</string>
    <string name="flow_save_confirm">I know</string>
    <string name="continue_when_wifi_disconnect">Continue listening to online music via mobile network</string>
    <string name="stop_when_wifi_disconnect">"WLAN connection has been lost, online songs have been stopped. If you want to listen to online songs using the operator's network, you can modify the settings."</string>
    <string name="donot_ask_me_again">"Don't ask again"</string>
    <string name="lrc_search_failed">Lyrics not found!</string>
    <string name="lrc_searching">Searching for lyrics...</string>
    <string name="lyric_open_other_connect">Download lyrics using mobile internet connection</string>
    <string name="search_in_process">Searching</string>
    <string name="search_failed">Search failed</string>
    <string name="search_history">Search History</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="impunity_declaration_title">Declaration</string>
    <string name="impunity_declaration">The online music you are about to use is from Baidu Online Music Service. Click \"OK\" to accept and use, click \"Cancel\" to exit.</string>
    <string name="music_filter_helper">In order to hide files which are not music, a size filter of 800K has been applied to hide these files from being displayed. The threshold can be adjusted in Settings / File filter.</string>
    <string name="modify_meta">Edit song information</string>
    <string name="id3_edit">Edit ID3 information</string>
    <string name="lyric_download">Download lyrics</string>
    <string name="use_local_lyric">Use saved lyrics</string>
    <string name="album_download">Download album art</string>
    <string name="use_local_album">Use saved album art</string>
    <string name="lyric_picker_not_found">File Manager not found on the device</string>
    <string name="lrc_select">Select lyrics</string>
    <string name="album_picker_not_found">Gallery not found on the device</string>
    <string name="id3_edit_failed">Failed to edit ID3 information</string>
    <string name="album_search_failed">Album art not found!</string>
    <string name="start_to_download_album">Downloading album art for your song(s) library</string>
    <string name="download_all_album">Download album art(s)</string>
    <string name="equalizer">Equalizer</string>
    <string name="no_effect">No effect</string>
    <string name="equalizer_delete">Delete</string>
    <string name="equalizer_delete_success">Equalizer profile successfully removed</string>
    <string name="equalizer_enable">Equalizer Settings</string>
    <string name="equalizer_save_success">Equalizer profile saved</string>
    <string name="create_equalzier_create_text_prompt">Equalizer effect name</string>
    <string name="new_equalizer_name_template">New EQ profile %d</string>
    <string name="custom">Customize</string>
    <string name="lpa_off_hint">You need to close low-power audio play to enable equalizer, please set in Settings-> System -> Battery Settings. Your battery consumption will increase.</string>
    <string name="id3_modify_confirm_text">Save</string>
    <string name="id3_modify_confirm_check">Confirm ID3 changes?</string>
    <string name="modify_id3_for_list">The songs of current list ID3 information will be edited</string>
    <string name="modify_id3_for_selected">The selected songs ID3 information will be edited</string>
    <string name="track_edit">Song</string>
    <string name="artist_edit">Artist</string>
    <string name="album_edit">Album</string>
    <string name="empty_edit_hint">Song information unavailable</string>
    <string name="modify_tracks_id3_background">Modify selected songs ID3 information in background</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="click_to_shuffle">Click to shuffle all</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="streamloadingtext">Connecting to %s</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
</resources>